--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "bufferutil": "^4.0.7",
     "dayjs": "^1.11.9",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
@@ -24,8 +25,10 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "socket.io-client": "^4.7.2",
     "tailwindcss": "^3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "utf-8-validate": "^5.0.10"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
