--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.9",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "formik": "^2.4.5",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "lucide-react": "^0.216.0",
@@ -33,6 +34,7 @@
     "tailwindcss": "^3.3.2",
     "typescript": "5.0.4",
     "utf-8-validate": "^5.0.10",
+    "yup": "^1.3.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
